--- a/example/detect_landslide_colab.ipynb
+++ b/example/detect_landslide_colab.ipynb
@@ -216,7 +216,7 @@
         "id": "rROfITdaDp_3"
       },
       "source": [
-        "The data downloader will seek between pre_date_1 and pre_date_2 for data before the landslide event, and between post_date_1 and post_date_2 for data after the event. These dates should satisfy: pre_date_1 < pre_date_2 < *landslide date* < post_date_1 < pre_date_2"
+        "The data downloader will seek between pre_date_1 and pre_date_2 for data before the landslide event, and between post_date_1 and post_date_2 for data after the event. These dates should satisfy: pre_date_1 < pre_date_2 < *landslide date* < post_date_1 < post_date_2"
       ]
     },
     {
